fix for items page loading into homepage at wrong width

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -11,7 +11,9 @@
 	position: absolute;
 	top: 100%;
 	max-width: 1366px;
-	width: 100%;
+	left: 22px;
+	right: 22px;
+	margin: 0 auto;
 }
 
 .addition {
